# AnathemaReact

./: .flake8  README.md
backend/: .gitignore  pyproject.toml
backend/anathema/: main.py
backend/anathema/core/: config.py
frontend/: .env  next.conf.ts  package-lock.json  package.json
frontend/src/: App.tsx  Client.ts  config.ts
frontend/src/components/: Button.tsx  Panel.tsx
frontend/src/components/attic/: Button.tsx
